--- a/src/main/webapp/WEB-INF/pages/create.html
+++ b/src/main/webapp/WEB-INF/pages/create.html
@@ -6,27 +6,27 @@
 
 </head>
 <body>
-    <h1>Create a User</h1>
-    <a th:href="@{/users}">Back to User List</a>
-    <br/><br/>
-    <form th:method="POST" th:action="@{/users}" >
-        <div th:if="${user}" >
-            <table>
-                <tr>
-                    <td><label for="firstName">Enter name: </label></td>
-                    <td><input th:type="text" th:field="${user.firstName}" id="firstName"/></td>
-                </tr>
-                <tr>
-                    <td><label for="lastName">Enter surname: </label></td>
-                    <td><input th:type="text" th:field="${user.lastName}" id="lastName"/></td>
-                </tr>
-                <tr>
-                    <td><label for="email">Enter email: </label></td>
-                    <td><input th:type="text" th:field="${user.email}"  id="email"/></td>
-                </tr>
-            </table>
-        </div>
-        <input th:type="submit" th:value="Create" />
-    </form>
+<h1>Create a User</h1>
+<a th:href="@{/users}">Back to User List</a>
+<br/><br/>
+<form method="post" th:action="@{/create}" th:object="${user}">
+    <div th:if="${user}">
+        <table>
+            <tr>
+                <td><label for="firstName">Enter name:</label></td>
+                <td><input th:type="text" th:field="${user.firstName}" id="firstName"/></td>
+            </tr>
+            <tr>
+                <td><label for="lastName">Enter surname:</label></td>
+                <td><input th:type="text" th:field="${user.lastName}" id="lastName"/></td>
+            </tr>
+            <tr>
+                <td><label for="email">Enter email:</label></td>
+                <td><input th:type="text" th:field="${user.email}" id="email"/></td>
+            </tr>
+        </table>
+    </div>
+    <input type="submit" value="Create"/>
+</form>
 </body>
 </html>
